--- a/build.gradle
+++ b/build.gradle
@@ -14,8 +14,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.testng:testng:7.6.1'
+    testImplementation 'org.testng:testng:7.1.0'
 }
 
 test {
+    useTestNG()
 }
